[project]
name = "decoraters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Umair Daud", email = "umairdaud01@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
decorater = "decoraters.main:msg"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
